fix bilhetes gap tablet

--- a/css/style.css
+++ b/css/style.css
@@ -1615,6 +1615,10 @@ section.bilhetes .container {
 
     @media screen and (min-width: 800px) {
         grid-template-columns: 1fr 1fr;
+        gap: 15px;
+    }
+
+    @media screen and (min-width: 1200px) {
         gap: 40px;
     }
 }
